--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="fight-area">
-        <div id="person">
+        <div id="char">
             <div class="life-bar">
                 <div class="life"></div>
             </div>
-            <strong class="name">Personagem 1</strong>
+            <strong class="name">--</strong>
             <div>
                 <button class="attack-button">Atacar</button>
             </div>
@@ -22,7 +22,7 @@
             <div class="life-bar">
                 <div class="life"></div>
             </div>
-            <strong class="name">Personagem 2</strong>
+            <strong class="name">--</strong>
             <div>
                 <button class="attack-button">Atacar</button>
             </div>
