--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <ul class="log"></ul>
 
-    <script src="./js/classes.js"></script>
+    <script src="./js/functions.js"></script>
     <script src="./js/scripts.js"></script>
 </body>
 </html>
