--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="fight-area">
-        <div id="char">
+        <div id="player1">
             <div class="life-bar">
                 <div class="life"></div>
             </div>
@@ -18,7 +18,7 @@
                 <button class="attack-button">Atacar</button>
             </div>
         </div>
-        <div id="monster">
+        <div id="player2">
             <div class="life-bar">
                 <div class="life"></div>
             </div>
