--- a/index.html
+++ b/index.html
@@ -6,25 +6,41 @@
     <title>Luta</title>
 
     <link rel="stylesheet" href="./styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="fight-area">
         <div id="player1">
+            <div class="player1Img">
+                <img src="./imgs/knight.png" class="knight" />
+                <img src="./imgs/sorcerer.png" class="sorcerer" />
+                <img src="./imgs/little-monster.png" class="little-monster" />
+                <img src="./imgs/big-monster.png" class="big-monster" />
+            </div>
             <div class="life-bar">
                 <div class="life"></div>
             </div>
             <strong class="name">--</strong>
             <div>
-                <button class="attack-button">Atacar</button>
+                <a class="attack-button">Atacar</a>
             </div>
         </div>
         <div id="player2">
+            <div class="player2Img">
+                <img src="./imgs/knight.png" class="knight" />
+                <img src="./imgs/sorcerer.png" class="sorcerer" />
+                <img src="./imgs/little-monster.png" class="little-monster" />
+                <img src="./imgs/big-monster.png" class="big-monster" />
+            </div>
             <div class="life-bar">
                 <div class="life"></div>
             </div>
             <strong class="name">--</strong>
             <div>
-                <button class="attack-button">Atacar</button>
+                <a class="attack-button">Atacar</a>
             </div>
         </div>
     </div>
